production/hajimari/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hajimari-ingress
  namespace: hajimari
  annotations:
    hajimari.io/enable: True
    hajimari.io/appName: "Hajimari"
    hajimari.io/icon: mdiMenu
    hajimari.io/targetBlank: true
    hajimari.io/group: "Production"
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
  - host: "start.dev.jpto.dev"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: hajimari
            port:
              number: 3000
  tls:
  - hosts: 
    - start.dev.jpto.dev
    secretName: hajimari-jptodev-tls-production
